--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
-  font-family: "gg";
+  font-family: "exo_2.0thin";
   font-weight: 400;
   font-style: normal;
-  src: local(""),
-    url("../fonts/.woff2") format("woff2"),
-    url("../fonts/.woff") format("woff");
+  src: local("exo2.0-thin"),
+    url("../fonts/exo2.0-thin.woff2") format("woff2"),
+    url("../fonts/exo2.0-thin.woff") format("woff");
   font-display: swap;
 }
