--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: "exo_2.0thin";
-  font-weight: 400;
+  font-family: "Exo";
+  font-weight: 100;
   font-style: normal;
-  src: local("exo2.0-thin"),
+  src: local("Exo"),
     url("../fonts/exo2.0-thin.woff2") format("woff2"),
     url("../fonts/exo2.0-thin.woff") format("woff");
   font-display: swap;
