--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -1,4 +1,94 @@
-.wrapper {
-  width: 900px;
-  margin: 0 auto;
+.content {
+  transform: translateY(50%);
+  padding: 0 calc(50% - 560px);
+}
+
+body {
+  position: relative;
+  background: url("../img/bg.jpg") #cccccc;
+}
+
+.content__title {
+  font-family: $font-exo;
+  font-weight: 100;
+  font-size: 36px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.catalog {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0;
+  font-family: $font-trebuchet;
+}
+
+.catalog__item {
+  position: relative;
+  box-sizing: border-box;
+  width: 320px;
+  height: 480px;
+  padding-left: 48px;
+  background: url("../img/cato.jpg") no-repeat #ffffff;
+  background-position: bottom -100px center;
+  border: 4px solid $color-default;
+  border-radius: 10px;
+  z-index: -1;
+
+  &::before {
+    @include pseudo;
+    left: -19px;
+    top: -15px;
+    width: 42px;
+    height: 30px;
+    transform: rotate(-45deg);
+    z-index: 1;
+    background-image: url("../img/bg.jpg");
+    border: 0;
+    border-bottom: 4px solid $color-default;
+  }
+}
+
+.catalog__item-text {
+  font-size: 16px;
+}
+
+.catalog__item-title {
+  font-size: 48px;
+  font-weight: 700;
+}
+
+.catalog__item-subtitle {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+
+@media #{$tablet} {
+
+  .catalog{
+    justify-content: space-around;
+  }
+
+  .catalog__item {
+    margin-bottom: 40px;
+    margin: 0 30px 40px;
+
+    &:last-child {
+      align-self: center;
+    }
+  }
+}
+
+@media #{$mobile} {
+
+  .catalog {
+    flex-direction: column;
+    align-content: center;
+  }
+
+  .catalog__item {
+    margin-bottom: 40px;
+  }
 }
