--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,5 +2,8 @@ $tablet: '(min-width: 768px) and (max-width: 1023px)';
 $mobile: '(min-width: 320px) and (max-width: 767px)';
 $font-exo: 'Exo', 'Arial', sans-serif;
 $font-trebuchet: 'Trebuchet MS', 'Arial', sans-serif;
-$color-select: #e62e7a;
 $color-default: #1698d9;
+$color-default-hover: #2ea8e6;
+$color-select: #d91667;
+$color-select-hover: #e62e7a;
+$color-disable: #b3b3b3;
