--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -29,12 +29,12 @@ body {
   box-sizing: border-box;
   width: 320px;
   height: 480px;
-  padding-left: 48px;
+  padding: 0 10px 0 47px;
   background: url("../img/cato.jpg") no-repeat #ffffff;
   background-position: bottom -100px center;
   border: 4px solid $color-default;
   border-radius: 10px;
-  z-index: -1;
+
 
   &::before {
     @include pseudo;
@@ -48,20 +48,76 @@ body {
     border: 0;
     border-bottom: 4px solid $color-default;
   }
+
+  &:hover {
+    border: 4px solid $color-default-hover;
+    cursor: pointer;
+
+    &::before {
+      border-bottom: 4px solid $color-default-hover;
+    }
+  }
+
+  &--select {
+    border: 4px solid $color-select;
+
+    &::before {
+      border-bottom: 4px solid $color-select;
+    }
+
+    &:hover {
+      border: 4px solid $color-select-hover;
+
+      &::before {
+        border-bottom: 4px solid $color-select-hover;
+      }
+    }
+  }
+
+  &--disabled {
+    border: 4px solid $color-disable;
+
+    &::before {
+      border-bottom: 4px solid $color-disable;
+    }
+
+    &:hover {
+      border: 4px solid $color-disable;
+
+      &::before {
+        border-bottom: 4px solid $color-disable;
+      }
+    }
+  }
+
 }
 
 .catalog__item-text {
   font-size: 16px;
+  margin: 25px 0 0;
 }
 
 .catalog__item-title {
   font-size: 48px;
   font-weight: 700;
+  margin: 17px 0 0;
 }
 
 .catalog__item-subtitle {
   font-size: 24px;
   font-weight: 700;
+  margin: 0;
+}
+
+.catalog__item-weight {
+  @include pseudo;
+  bottom: -30px;
+  margin: 0;
+  font-family: $font-trebuchet;
+  font-size: 13px;
+  line-height: 16px;
+  text-align: center;
+  color: #ffffff;
 }
 
 
