--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -132,6 +132,11 @@ body {
   font-size: 21px;
 }
 
+.catalog__item-buy {
+  color: $color-default;
+  border-bottom: 1px dashed $color-default;
+}
+
 .catalog__item-text {
   font-size: 16px;
   margin: 25px 0 0;
@@ -140,7 +145,7 @@ body {
 .catalog__item-title {
   font-size: 48px;
   font-weight: 700;
-  margin: 10px 0 0;
+  margin: 6px 0 0;
 }
 
 .catalog__item-subtitle {
