--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -169,6 +169,11 @@ body {
   background-color: green;
 }
 
+.overlay {
+  background-color: #ebebeb;
+  opacity: 0.95;
+}
+
 
 @media #{$tablet} {
 
