Переделал события мыши

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -122,6 +122,10 @@ body {
   }
 }
 
+.catalog__item-text--red {
+  color: #e62e7a;
+}
+
 .catalog__item--disabled  .overlay {
   display: block;
 }
