Заполнил и отрисовал карточки

--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -176,7 +176,7 @@ body {
   margin: 6px 0 0 42px;
 }
 
-.catalog__item-subtitle {
+.catalog__item-type {
   font-size: 24px;
   font-weight: 700;
   margin: 0 0 0 42px;
